--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 </figcaption>
             </div>
             <div class="textbody">
-                <p class="intro">I'm Alex, a software engineer with full stack dev skills.</p>
+                <p class="intro">I'm Alex, a Software Engineer with full stack dev skills.</p>
                 <p class ='main'>
-                    I'm also an electrical/electronic engineering student and have experience with a variety of technologies.
+                    I'm also an Electrical/Electronic Engineering student and have experience with a variety of technologies.
                     <br>I am proficient in C/C++, Python, HTML, CSS, Javascript and SQL.
                     <br>I also have experience working with LLMs, especially with creating and evaluating training data.
                 </p>    
